# auto-furniture-data

./: .env.example  .gitignore  Dockerfile  app-config-template.yaml  compose.yaml  main.py  pyproject.toml
data-converter/: HIERARCHY_PRESERVATION_GUIDE.md  MAX_TO_FBX_GUIDE.md  QUICK_REFERENCE.txt  README.md  README_MAX_CONVERSION.md  batch_max_converter.py  convert_max.sh  main.py  max_converter_gui.py  max_to_fbx_assimp.py  max_to_fbx_blender.py  max_to_fbx_preserve_hierarchy.py  max_to_fbx_wine.py  pyproject.toml  pyrightconfig.json  setup_max_converter.sh  shell.nix  test-conversion.py  universal_max_converter.py
data-processor/: .gitignore  pyproject.toml
data-processor/alembic/: env.py
data-processor/alembic/versions/: 20260401_1517_b82a76d9de00_initial_schema_for_3d_objects.py
data-processor/src/: __init__.py
data-processor/src/api/: __init__.py  objects.py
data-processor/src/core/: __init__.py  config.py
data-processor/src/db/: __init__.py  base.py  session.py
data-processor/src/models/: __init__.py  object_3d.py  object_file.py
data-processor/src/schemas/: __init__.py  object_schema.py
data-processor/src/services/: __init__.py  etl_service.py  model_processor.py  storage_service.py  thumbnail_service.py
glb-viewer/: .gitignore  ExportGroupsToGLB.ms  QUICKSTART.md  README.md  blender_export.py  coronatophysical.ms  index.ts  package-lock.json  package.json  shell.nix  transform-metadata.py
glb-viewer/build-scene-viewer/: scene-viewer.js
glb-viewer/cli/: compress-draco.ts  extract-meshes.ts  mesh-extractor.ts  wall-size.ts
(+39 files in other folders)
